--- a/E-Library-System/src/main/resources/application.properties
+++ b/E-Library-System/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=E-Library-System
-spring.datasource.url=jdbc:postgresql://localhost:5432/E-Library-System
+spring.datasource.url=jdbc:postgresql://localhost:5432/ELibrary
 spring.datasource.username=postgres
 spring.datasource.password=pushpa@9798
 spring.datasource.driver-class-name=org.postgresql.Driver
