--- a/E-Library-System/pom.xml
+++ b/E-Library-System/pom.xml
@@ -75,7 +75,13 @@
             <artifactId>lombok</artifactId>
             <version>1.18.34</version>
         </dependency>
+		<dependency>
+		<groupId>org.springdoc</groupId>
+		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		<version>2.0.2</version>
+	</dependency>
     </dependencies>
+
 	
 
 	<build>
